# reearth-plateauview

./: .env  .gitignore  CHANGELOG.md  go.work.sum
.github/: changelog.yml  labeler.yml  renovate.json
.github/workflows/: build-plugin.yml  build-server.yml  build-worker.yml  ci-plugin.yml  ci-server.yml  ci-tools.yml  ci-worker.yml  ci.yml  cron-ion-token-prod.yml  deploy-cms-dev.yml  deploy-cms-prod.yml  deploy-reearth-dev.yml  deploy-reearth-prod.yml  deploy-server-dev.yml  deploy-server-prod.yml  deploy-worker-dev.yml  deploy-worker-prod.yml  e2e.yml  plugin.yml  pr-title.yml  release.yml  server.yml  server_build.yml  server_deploy._yml  server_deploy.yml  stage.yml  test.yml
plugin/: .eslintrc.yml  .gitignore  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.datacatalog-web.ts  vite.config.datacatalog.ts  vite.config.mapSetting-web.ts  vite.config.mapSetting.ts  vite.config.sidebar-web.ts  vite.config.sidebar.ts  vite.config.template.ts  vite.config.ts  zip.mjs
plugin/public/: reearth.yml
plugin/src/: datacatalog.ts  geolocation.ts  infobox.ts  (+6 more)
server/: .dockerignore  .gitignore  Dockerfile  config.go  go.mod  go.sum  gqlgen.yml  main.go  service.go  tool.go
terraform/: .gitignore  .terraform.lock.hcl  README.md  output.tf  provider.tf  reearth.tf  terraform.tf  variables.tf
tools/: Cargo.toml  convert.go  convert_test.go  go.mod  go.sum
tools/src/: args.rs  main.rs  migrateuc.rs  prepare.rs
tools/src/prepare/: check.rs  compress.rs  list.rs  sevenzip.rs  zip.rs
worker/: Dockerfile  go.mod  go.sum  main.go
(+828 files in other folders)
